--- a/src/configs/ndt1_stitching_prompting.yaml
+++ b/src/configs/ndt1_stitching_prompting.yaml
@@ -61,7 +61,7 @@ encoder:
 
     tokenize_binary_mask: false
     use_prompt: true
-    use_session: true
+    use_session: false
 
     stack:
       active: false        # wether to stack consecutive timesteps
